projects/vb6parse/snapshots/parsers/cst/deftype_statements/deftype_defbool.snap
---
source: projects/vb6parse/src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefBoolKeyword
          text: DefBool
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: B
        - kind: Newline
          text: "\n"
