projects/vb6parse/snapshots/parsers/cst/deftype_statements/deftype_defstr_single.snap
---
source: projects/vb6parse/src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefStrKeyword
          text: DefStr
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: S
        - kind: Newline
          text: "\n"
